--- a/kubernetes/kubernetes.yaml
+++ b/kubernetes/kubernetes.yaml
@@ -6,11 +6,10 @@ data:
   database_url: mongodb-service
   database_port: "27017"
 ---
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongo-express-deployment
+  name: mongo-express-deployment-v1
   labels:
     app: mongo-express
 spec:
@@ -22,10 +21,11 @@ spec:
     metadata:
       labels:
         app: mongo-express
+        ver: v1.0
     spec:
       containers:
       - name: mongo-express
-        image: mrdavehill/mongo-express
+        image: mongo-express:1.0-20-alpine3.19
         ports:
         - containerPort: 8081
         env:
@@ -55,7 +55,55 @@ spec:
               name: mongodb-configmap
               key: database_url
 ---
-
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: mongo-express-deployment-v2
+  labels:
+    app: mongo-express
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: mongo-express
+  template:
+    metadata:
+      labels:
+        app: mongo-express
+        ver: v2.0
+    spec:
+      containers:
+      - name: mongo-express
+        image: mongo-express:1.0.2-20-alpine3.19
+        ports:
+        - containerPort: 8081
+        env:
+        - name: ME_CONFIG_MONGODB_ADMINUSERNAME
+          valueFrom:
+            secretKeyRef:
+              name: mongodb-secret
+              key: mongodb-root-username
+        - name: ME_CONFIG_MONGODB_ADMINPASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mongodb-secret
+              key: mongodb-root-password
+        - name: ME_CONFIG_BASICAUTH_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: mongodb-secret
+              key: mongodb-root-username
+        - name: ME_CONFIG_BASICAUTH_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mongodb-secret
+              key: mongodb-root-password
+        - name: ME_CONFIG_MONGODB_SERVER
+          valueFrom:
+            configMapKeyRef:
+              name: mongodb-configmap
+              key: database_url
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -74,7 +122,7 @@ spec:
     spec:
       containers:
       - name: mongodb
-        image: mrdavehill/mongo
+        image: mongo
         ports:
         - containerPort: 27017
         env:
@@ -98,12 +146,12 @@ metadata:
 spec:
   selector:
     app: mongo-express
+    ver: v2.0
   ports:
     - protocol: TCP
       port: 8081
       targetPort: 8081
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
@@ -118,7 +166,6 @@ spec:
       port: 27017
       targetPort: 27017
 ---
-
 apiVersion: v1
 kind: Secret
 metadata:
@@ -128,7 +175,6 @@ data:
   mongodb-root-username: dXNlcm5hbWU=
   mongodb-root-password: cGFzc3dvcmQ=
 ---
-
 apiVersion: networking.k8s.io/v1
 kind: IngressClass
 metadata:
@@ -138,7 +184,6 @@ metadata:
 spec:
   controller: eks.amazonaws.com/alb
 ---
-
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
